--- a/wp-content/themes/devopslibrary/style.css
+++ b/wp-content/themes/devopslibrary/style.css
@@ -2217,6 +2217,10 @@ body {
     color: #373f43;
     line-height: 22px;
 }
+.video-thumb img {
+    height: 160px;
+    width: 280px;
+}
 a {
     text-decoration: none;
     color: #ff7e00;
@@ -2234,7 +2238,7 @@ a {
     transition-timing-function: ease-in;
 }
 a:hover {
-    color: #33b7ff;
+    color: #ffa803;
 }
 h1, h2, h3, h4 {
     margin: 0 0 2px 0;
@@ -2594,7 +2598,7 @@ body:after {
     background-color: #bec0c3;
 }
 .carousel .main .dots li a:hover {
-    background-color: #33b7ff;
+    background-color: #7F3F00;
 }
 .carousel .main .window {
     clear: both;
@@ -2631,30 +2635,29 @@ body:after {
     font-weight: bold;
     color: #fff;
     padding: 0 10px;
-    background-color: #0057b4;
+    background-color: #7F3F00;
     background-repeat: repeat-x;
-    background-image: -khtml-gradient(linear,  left top,  left bottom,  from(#0392e0),  to(#0057b4));
-    background-image: -moz-linear-gradient(top,  #0392e0,  #0057b4);
-    background-image: -ms-linear-gradient(top,  #0392e0,  #0057b4);
-    background-image: -webkit-gradient(linear,  left top,  left bottom,  color-stop(0%,  #0392e0),  color-stop(100%,  #0057b4));
+    background-image: -khtml-gradient(linear,  left top,  left bottom,  from(#ff7e00),  to(#7F3F00));
+    background-image: -moz-linear-gradient(top,  #ff7e00,  #7F3F00);
+    background-image: -ms-linear-gradient(top,  #ff7e00,  #7F3F00);
+    background-image: -webkit-gradient(linear,  left top,  left bottom,  color-stop(0%,  #ff7e00),  color-stop(100%,  #7F3F00));
     background-image: -webkit-linear-gradient(top,  #ff7e00,  #7F3F00);
-    background-image: -o-linear-gradient(top,  #0392e0,  #0057b4);
-    background-image: linear-gradient(top,  #0392e0,  #0057b4);
+    background-image: -o-linear-gradient(top,  #ff7e00,  #7F3F00);
+    background-image: linear-gradient(top,  #ff7e00,  #7F3F00);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0392e0',  endColorstr='#0057b4',  GradientType=0);
     border: 1px solid #7F3F00;
     height: 35px;
 }
 .carousel .watch a:hover, .carousel .watch span:hover {
-    background-color: #0392e0;
+    background-color: #ff7e00;
     background-repeat: repeat-x;
-    background-image: -khtml-gradient(linear,  left top,  left bottom,  from(#0057b4),  to(#0392e0));
-    background-image: -moz-linear-gradient(top,  #0057b4,  #0392e0);
-    background-image: -ms-linear-gradient(top,  #0057b4,  #0392e0);
-    background-image: -webkit-gradient(linear,  left top,  left bottom,  color-stop(0%,  #0057b4),  color-stop(100%,  #0392e0));
-    background-image: -webkit-linear-gradient(top,  #0057b4,  #0392e0);
-    background-image: -o-linear-gradient(top,  #0057b4,  #0392e0);
-    background-image: linear-gradient(top,  #0057b4,  #0392e0);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#0057b4',  endColorstr='#0392e0',  GradientType=0);
+    background-image: -khtml-gradient(linear,  left top,  left bottom,  from(#7F3F00),  to(#ff7e00));
+    background-image: -moz-linear-gradient(top,  #7F3F00,  #ff7e00);
+    background-image: -ms-linear-gradient(top,  #7F3F00,  #ff7e00);
+    background-image: -webkit-gradient(linear,  left top,  left bottom,  color-stop(0%,  #7F3F00),  color-stop(100%,  #ff7e00));
+    background-image: -webkit-linear-gradient(top,  #7F3F00,  #ff7e00);
+    background-image: -o-linear-gradient(top,  #7F3F00,  #ff7e00);
+    background-image: linear-gradient(top,  #7F3F00,  #ff7e00);
 }
 .carousel .count, .carousel .runtime {
     color: #636363;
